@@ -1304,13 +1304,13 @@ let subset cmp l l' = for_all (fun x -> mem_cmp cmp x l') l
   subset Pervasives.compare [1;2] [1;2;3] = true
 *)
 
-let shuffle s l =
-    Shuffle.list_shuffle s l
+let shuffle ?state:(s = Random.get_state ()) l =
+  let a = Shuffle.array_shuffle ~state:s (Array.of_list l) in
+  Array.to_list a
 (*$T shuffle
-  let () = Random.init 11 in \
-  let s = Random.get_state () in \
-  shuffle (Some s) [1;2;3;4;5;6;7;8;9] = [7; 2; 9; 5; 3; 6; 4; 1; 8]
-  shuffle None [] = []
+  let s = Random.State.make [|11|] in \
+  shuffle ~state:s [1;2;3;4;5;6;7;8;9] = [7; 2; 9; 5; 3; 6; 4; 1; 8]
+  shuffle [] = []
 *)
 
 module Exceptionless = struct
