@@ -3,6 +3,8 @@ Changelog
 
 ## NEXT_RELEASE (minor release)
 
+- added {BatList|BatArray}.shuffle
+
 - Clarification and improvements to the documentation
   #682, #685, #693
   (Florian Angeletti, Johannes Kloos, Michael Färber)
